--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_backend?user=root&password=Cbcoa_1975&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_backend?user=root&password=Cbcoa_1975&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.ursername=root
 spring.datasource.password=Cbcoa_1975
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
