--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,16 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger2.springfox.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-bean-validators</artifactId>
+			<version>${swagger2.springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
